added margin-left on 2nd row

--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@
   font-family: "Source Sans Pro", sans-serif;
   flex-direction: column;
   font-size: 16px;
-  width: 20vw;
   color: #484a4c;
 }
 .right div {
@@ -64,7 +63,7 @@
 }
 
 .arrow {
-  margin-left: 145px;
+  margin-left: 100px;
 }
 .arrow img {
   height: 16px;
@@ -92,4 +91,7 @@
   margin-top: 10px;
   display: flex;
   flex-direction: row;
+}
+.flex-tworows .flex img {
+  margin-left: 10px;
 }/*# sourceMappingURL=style.css.map */
