--- a/style.scss
+++ b/style.scss
@@ -27,7 +27,6 @@
   flex-direction: column;
   font-size: 16px;
   //margin-top: -24px;
-  width: 20vw;
   color: #484a4c;
 
   div {
@@ -66,7 +65,7 @@
 
 //arrows
 .arrow {
-  margin-left: 145px;
+  margin-left: 100px;
 
   img {
     height: 16px;
@@ -93,4 +92,9 @@
   margin-top: 10px;
   display: flex;
   flex-direction: row;
+  .flex {
+    img {
+      margin-left: 10px;
+    }
+  }
 }
