--- a/style.scss
+++ b/style.scss
@@ -13,8 +13,6 @@
 }
 //MAIN FLEX ITEMS - left, right
 .left {
-  width: 60vw;
-
   img {
     height: 200px;
     border-radius: 5px;
@@ -26,18 +24,19 @@
   font-family: "Source Sans Pro", sans-serif;
   flex-direction: column;
   font-size: 16px;
-  //margin-top: -24px;
+
   color: #484a4c;
 
   div {
-    width: 250px;
-    margin-top: 16px;
+    width: 300px;
+    margin-top: 20px;
+    line-height: 26px;
+    font-size: 18px;
   }
   h1 {
     color: #134880;
     height: 120px;
     width: 305px;
-    margin-top: 16px;
   }
 }
 //1st gallery row
@@ -67,7 +66,6 @@
 //arrows
 .arrow {
   margin-left: 100px;
-
   img {
     height: 16px;
     width: 10px;
