--- a/style.css
+++ b/style.css
@@ -88,10 +88,12 @@
 }
 
 .flex-two {
-  margin-top: 10px;
+  margin-top: 5px;
   display: flex;
   flex-direction: row;
 }
-.flex-two .flex img {
-  margin-left: 10px;
+
+.image-wrapper-bottom {
+  display: flex;
+  gap: 10px;
 }/*# sourceMappingURL=style.css.map */
