--- a/style/index.css
+++ b/style/index.css
@@ -11,7 +11,21 @@
   grid-auto-flow: column;
   grid-auto-columns: minmax(-webkit-max-content, auto);
   grid-auto-columns: minmax(max-content, auto);
-  overflow-x: auto;
+  overflow-x: hidden;
+  gap: 10px;
+  -ms-scroll-snap-type: x mandatory;
+      scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+}
+
+.image-wrapper-bottom {
+  max-width: 810px;
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: minmax(-webkit-max-content, auto);
+  grid-auto-columns: minmax(max-content, auto);
+  overflow-x: hidden;
   gap: 10px;
   -ms-scroll-snap-type: x mandatory;
       scroll-snap-type: x mandatory;
@@ -20,6 +34,10 @@
 }
 
 .image-wrapper.no-smooth {
+  scroll-behavior: auto;
+}
+
+.image-wrapper-bottom.no-smooth {
   scroll-behavior: auto;
 }
 
@@ -33,11 +51,6 @@
   margin-top: 5px;
   display: flex;
   flex-direction: row;
-}
-
-.image-wrapper-bottom {
-  display: flex;
-  gap: 10px;
 }
 
 .right-side {
@@ -125,4 +138,8 @@
 .next-arrow:hover,
 .prev-arrow:hover {
   border: 1px solid #134880;
+}
+.next-arrow:focus,
+.prev-arrow:focus {
+  outline: none;
 }/*# sourceMappingURL=index.css.map */
