babel, minified css and js, added favicon

--- a/style/_button.scss
+++ b/style/_button.scss
@@ -17,6 +17,7 @@
   justify-content: space-around;
   &:hover {
     border: 1px solid $secondary;
+    cursor: pointer;
   }
   &:focus {
     outline: none;
