fixed buttons padding, 2 new pictures, testing JS

--- a/style/_base.scss
+++ b/style/_base.scss
@@ -28,8 +28,9 @@
   }
   .main {
     display: flex;
+    justify-content: center;
+    margin-left: -600px;
     margin-top: 150px;
-    margin-left: -400px;
   }
   .footer {
     @include footerHeader(100vw, 5px 5px 0 0);
