--- a/style/index.css
+++ b/style/index.css
@@ -6,7 +6,7 @@
 }
 
 .image-wrapper {
-  max-width: 1000px;
+  max-width: 1230px;
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: minmax(max-content, auto);
@@ -21,7 +21,7 @@
 }
 
 .image-wrapper-bottom {
-  max-width: 810px;
+  max-width: 1080px;
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: minmax(max-content, auto);
@@ -89,8 +89,9 @@
 }
 .content .main {
   display: flex;
+  justify-content: center;
+  margin-left: -600px;
   margin-top: 150px;
-  margin-left: -400px;
 }
 .content .footer {
   height: 100px;
@@ -103,7 +104,8 @@
 }
 
 .arrows {
-  margin-left: 100px;
+  padding-left: 90px;
+  width: 150px;
 }
 .arrows img {
   height: 16px;
